--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
           <div class="serviceTop">
             <h3 class="serviceTitle">Jornada e Experiência do Cliente</h3>
             <p class="serviceSummary">
-              Desenhamos e estruturamos a experiência do cliente de forma integrada à operação,
-              garantindo coerência entre estratégia, processos e relacionamento. Atuamos para que a
-              experiência seja mensurável, gerenciável e alinhada aos objetivos do negócio.
+              Conectamos a experiência do cliente à operação para que ela funcione de forma clara, mensurável e alinhada ao negócio.
             </p>
 
             <button class="serviceToggleBtn" type="button" aria-expanded="false">
@@ -106,9 +104,7 @@
           <div class="serviceTop">
             <h3 class="serviceTitle">Gestão de Processos</h3>
             <p class="serviceSummary">
-              Estruturamos processos para que a operação funcione de forma clara, integrada e alinhada
-              à estratégia do negócio. Nosso foco é transformar conhecimento operacional em métodos
-              consistentes, que sustentam o crescimento e a tomada de decisão.
+              Organizamos processos para uma operação clara e integrada, alinhada à estratégia do negócio, que sustenta o crescimento e a tomada de decisão.
             </p>
 
             <button class="serviceToggleBtn" type="button" aria-expanded="false">
@@ -143,9 +139,7 @@
           <div class="serviceTop">
             <h3 class="serviceTitle">Auditoria e Monitoramento de Operações</h3>
             <p class="serviceSummary">
-              Atuamos na avaliação contínua da operação para garantir que processos, normas e diretrizes
-              estejam sendo seguidos na prática. Nosso foco não é apontar erros, mas garantir execução,
-              identificar riscos e fortalecer a governança do negócio.
+              Acompanhamos a operação de forma contínua para garantir execução, antecipar riscos e fortalecer a governança do negócio.
             </p>
 
             <button class="serviceToggleBtn" type="button" aria-expanded="false">
