Atualização do site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section class="hero">
         <div class="heroImageWrap">
           <img
-            src="assets/images/photo.png"
+            src="assets/images/collage.png"
             alt="Colagem NexCX"
             class="heroImage"
             loading="eager"
