--- a/index.html
+++ b/index.html
@@ -170,6 +170,46 @@
         </article>
       </section>
 
+<!-- 3 PASSOS -->
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Timeline Vertical</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="timeline">
+    <div class="step">
+      <div class="circle">1</div>
+      <div class="content">
+        <h3>PLANEJAMENTO</h3>
+        <p>Levantamento de necessidades, dados e riscos.</p>
+      </div>
+    </div>
+
+    <div class="step">
+      <div class="circle">2</div>
+      <div class="content">
+        <h3>EXECUÇÃO</h3>
+        <p>Aplicação das mudanças com apoio técnico e estratégico.</p>
+      </div>
+    </div>
+
+    <div class="step">
+      <div class="circle">3</div>
+      <div class="content">
+        <h3>ACOMPANHAMENTO</h3>
+        <p>Monitoramento até que o processo se estabilize.</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
+
+
       <!-- FOOTER -->
 <footer class="footerSection" id="contato">
   <div class="footerInner">
