Atualização do site

--- a/index.html
+++ b/index.html
@@ -171,42 +171,32 @@
       </section>
 
 <!-- 3 PASSOS -->
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timeline Vertical</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="timeline">
-    <div class="step">
-      <div class="circle">1</div>
-      <div class="content">
-        <h3>PLANEJAMENTO</h3>
-        <p>Levantamento de necessidades, dados e riscos.</p>
-      </div>
-    </div>
-
-    <div class="step">
-      <div class="circle">2</div>
-      <div class="content">
-        <h3>EXECUÇÃO</h3>
-        <p>Aplicação das mudanças com apoio técnico e estratégico.</p>
-      </div>
-    </div>
-
-    <div class="step">
-      <div class="circle">3</div>
-      <div class="content">
-        <h3>ACOMPANHAMENTO</h3>
-        <p>Monitoramento até que o processo se estabilize.</p>
-      </div>
+<section class="timeline">
+  <div class="step">
+    <div class="circle">1</div>
+    <div class="text">
+      <h3>Planejamento</h3>
+      <p>Levantamento de<br>necessidades, dados e riscos.</p>
     </div>
   </div>
-</body>
-</html>
+
+  <div class="step">
+    <div class="circle">2</div>
+    <div class="text">
+      <h3>Execução</h3>
+      <p>Aplicação das mudanças com<br>apoio técnico e estratégico.</p>
+    </div>
+  </div>
+
+  <div class="step last">
+    <div class="circle">3</div>
+    <div class="text">
+      <h3>Acompanhamento</h3>
+      <p>Até que o processo se estabilize.</p>
+    </div>
+  </div>
+</section>
+
 
 
 
