--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 </section>
 
 
+<!-- AMARELO -->
+ <section class="highlighted-section">
+  <div class="highlighted-content">
+    <p>Empresas organizadas <br> lucram mais.</p>
+  </div>
+</section>
+
+
 
       <!-- SERVICES (TOGGLE) -->
       <section class="servicesToggleSection" id="servicos">
@@ -196,12 +204,67 @@
 </div>
 
 
-<!-- AMARELO -->
- <section class="highlighted-section">
-  <div class="highlighted-content">
-    <p>Empresas organizadas <br> lucram mais.</p>
+<!-- TRUST -->
+<section class="trustSection">
+  <h2 class="trustTitle">Quem também confia na NexCX</h2>
+  <div class="trustLogos">
+    <img src="assets/images/logo1.png" alt="Logo 1" />
+    <img src="assets/images/logo2.png" alt="Logo 2" />
+    <img src="assets/images/logo3.png" alt="Logo 3" />
+    <img src="assets/images/logo4.png" alt="Logo 4" />
   </div>
 </section>
+
+
+<!-- EQUIPE -->
+<section class="teamSection" id="equipe">
+  <h2 class="sectionTitle">Equipe</h2>
+
+  <div class="teamGrid">
+    <!-- Mariana -->
+    <div class="teamMember">
+      <div class="teamPhotoWrap">
+        <img class="teamPhoto" src="assets/images/funcionario1.png" alt="Mariana Araújo" />
+      </div>
+      <div class="teamName">Mariana Araújo</div>
+      <div class="teamRole">Processos e Auditoria</div>
+      <button class="teamToggleBtn" type="button" aria-expanded="false">Saiba mais</button>
+      <div class="teamMoreText" aria-hidden="true">
+        <p><strong>Especialista em Processos, Governança e Auditoria Operacional</strong></p>
+        <p>Mariana possui experiência na estruturação e melhoria de processos, diagnóstico organizacional e auditoria operacional, atuando junto à alta liderança no fortalecimento da governança e na organização de operações complexas. Sua atuação em auditorias já resultou em projetos de recuperação financeira relevantes, por meio da identificação de desvios, fragilidades operacionais e oportunidades de melhoria, convertendo análises técnicas em impacto concreto e sustentável para o negócio.</p>
+      </div>
+    </div>
+
+    <!-- Raisa -->
+    <div class="teamMember">
+      <div class="teamPhotoWrap">
+        <img class="teamPhoto" src="assets/images/funcionario3.png" alt="Raisa Gonçalves" />
+      </div>
+      <div class="teamName">Raisa Gonçalves</div>
+      <div class="teamRole">Experiência do Cliente</div>
+      <button class="teamToggleBtn" type="button" aria-expanded="false">Saiba mais</button>
+      <div class="teamMoreText" aria-hidden="true">
+        <p><strong>Especialista em Jornada e Experiência do Cliente</strong></p>
+        <p>Raisa possui sólida experiência na gestão de relacionamento e experiência do cliente, com atuação direta na administração de carteiras superiores a 100 mil clientes. Sua trajetória envolve a estruturação de jornadas, análise da percepção do cliente e fortalecimento de operações de pós-vendas em ambientes de grande escala. Atua com visão operacional e estratégica da experiência, conectando atendimento, relacionamento e objetivos do negócio, com foco em consistência, retenção e geração de valor ao longo do ciclo do cliente.</p>
+      </div>
+    </div>
+
+    <!-- Wilmar -->
+    <div class="teamMember">
+      <div class="teamPhotoWrap">
+        <img class="teamPhoto" src="assets/images/funcionario2.png" alt="Wilmar Neto" />
+      </div>
+      <div class="teamName">Wilmar Neto</div>
+      <div class="teamRole">Tecnologia e Inovação</div>
+      <button class="teamToggleBtn" type="button" aria-expanded="false">Saiba mais</button>
+      <div class="teamMoreText" aria-hidden="true">
+        <p><strong>Especialista em Tecnologia, Automação e Inovação</strong></p>
+        <p>Wilmar atua na aplicação de tecnologia e automação como suporte à eficiência operacional e à tomada de decisão em ambientes corporativos. Possui experiência no desenvolvimento, integração e uso de soluções tecnológicas voltadas à organização de processos, dados e rotinas de gestão. Também possui experiência na estruturação e no desenvolvimento de ferramentas de CRM, apoiando empresas na gestão de clientes e no uso estratégico das informações de relacionamento como base para decisões gerenciais e operacionais.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
@@ -211,7 +274,8 @@
     <img src="assets/images/nexcx.png" alt="NexCX" class="footerLogo" />
 
     <p class="footerHeadline">
-      Transformando processos, operações e experiências em eficiência real.
+      Transformando processos, operações e experiências<br>
+      em eficiência real.<br>
     </p>
 
     <div class="footerContacts">
