--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   <span class="footerText">contato@nexcx.com.br</span>
 </a>
 
-<a class="footerContact" href="tel:+5562992387062">
+<a class="footerContact" href="wa.me/5562992387062">
   <span class="footerIcon" aria-hidden="true">
     <img src="assets/images/icon1.png" alt="Ícone de telefone" />
   </span>
