--- a/index.html
+++ b/index.html
@@ -287,12 +287,13 @@
   <span class="footerText">contato@nexcx.com.br</span>
 </a>
 
-<a class="footerContact" href="wa.me/5562992387062">
+<a class="footerContact" href="https://wa.me/5562992387062" target="_blank" rel="noopener noreferrer">
   <span class="footerIcon" aria-hidden="true">
     <img src="assets/images/icon1.png" alt="Ícone de telefone" />
   </span>
   <span class="footerText">(62) 9 9238 7062</span>
 </a>
+
 
 
     </div>
