--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <!-- EQUIPE -->
 <section class="teamSection" id="equipe">
-  <h2 class="sectionTitle">Equipe</h2>
+  <h2 class="sectionTitle">Copilotos</h2>
 
   <div class="teamGrid">
     <!-- Mariana -->
