ajustes de layout

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
+
   <div class="app">
     <div class="shell">
 
+
       <!-- HERO -->
       <section class="hero">
+
         <div class="heroImageWrap">
           <img
             src="assets/images/collage2.png"
@@ -53,8 +56,8 @@
       </p>
 
       <p class="whiteSub">
-        Enquanto você dirige, a NexCX lê o painel, aponta riscos,
-        sugere rotas e ajusta o trajeto.
+        Enquanto você dirige, a <span class="brandHighlight">NexCX</span> lê o painel, aponta riscos, sugere rotas e ajusta o trajeto.
+
       </p>
 
       <a href="#contato" class="whiteCta">Vamos conversar</a>
@@ -75,6 +78,9 @@
       <!-- SERVICES (TOGGLE) -->
       <section class="servicesToggleSection" id="servicos">
         <h2 class="servicesMainTitle">Nossos Serviços</h2>
+
+      <div class="serviceCardWrapper">
+
 
         <!-- CARD 1 -->
         <article class="serviceCard">
@@ -181,8 +187,11 @@
             </ul>
           </div>
         </article>
-      </section>
+      </div>
+    </section>
 
+
+      
 <!-- 3 PASSOS -->
 <div class="timeline">
   <img src="assets/images/numbers.png" alt="Timeline" class="timeline-img" />
@@ -274,8 +283,7 @@
     <img src="assets/images/nexcx.png" alt="NexCX" class="footerLogo" />
 
     <p class="footerHeadline">
-      Transformando processos, operações e experiências<br>
-      em eficiência real.<br>
+      Transformando processos, operações e experiências em eficiência real.
     </p>
 
     <div class="footerContacts">
@@ -302,7 +310,7 @@
   <div class="footerDivider"></div>
 
   <div class="footerBottom">
-    <p class="footerCopy">© NexCX. Conectar. Otimizar. Encantar.</p>
+    <p class="footerCopy">©️ NexCX. Conectar. Otimizar. Encantar.</p>
   </div>
 </footer>
 
@@ -319,3 +327,4 @@
   <script src="script.js?v=100"></script>
 </body>
 </html>
+
